<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Similarty Text</string>
    <string name="image_logo">image_logo</string>
    <string name="textView_login">Login</string>
    <string name="textView_login_as">Login Sebagai</string>

    <string name="inputText_username">NIM</string>
    <string name="inputText_ket_bimbingan">Keterangan Bimbingan</string>
    <string name="inputText_ket_balasan">Keterangan Balasan Bimbingan</string>
    <string name="inputText_nidn">NIDN</string>
    <string name="inputText_password">Password</string>
    <string name="inputText_name">Name</string>
    <string name="inputText_title">Judul</string>
    <string name="inputText_room">Ruangan</string>
    <string name="inputText_time">Jam</string>
    <string name="inputText_date">Empety</string>
    <string name="inputText_address">Alamat</string>
    <string name="inputText_nohp">No Handphone</string>
    <string name="inputText_email">Email</string>
    <string name="inputText_ketrev">Keterangan Revisi</string>
    <string name="inputText_id">ID</string>
    <string name="title_welcome_page">Selamat datang di App Seminar Proposal!</string>
    <string name="message_welcome_page">Menjadi Program Studi yang Unggul di bidang Sistem Informasi, Berbasis Kearifan Lokal serta Berdaya Saing Global</string>
    <string name="email_error">Masukkan Username yang valid!</string>
    <string name="password_error">Minimal 5 karakter password</string>

    <string name="button_login">Login</string>
    <string name="button_upload">Upload File</string>
    <string name="button_cek">Cek Judul</string>
    <string name="button_register">Register</string>
    <string name="button_edit">Edit Profile</string>
    <string name="button_save">Simpan</string>
    <string name="button_file">Pilih File</string>
    <string name="button_mhs">Mahasiswa</string>
    <string name="button_dosen">Dosen</string>

    <string name="radio_revisi_kecil">Revisi Kecil</string>
    <string name="radio_revisi_besar">Revisi Besar</string>
    <string name="radio_revisi_kosong">Tidak Ada</string>
    <string name="radio_hasil_diterima">Diterima</string>
    <string name="radio_hasil_ditolak">Ditolak</string>

    <string name="textView_register">Register</string>
    <string name="login_desc">Belum Mempunyai Akun ?</string>
    <string name="register_desc">Sudah Mempunyai Akun ?</string>
    <string name="error_textField">Isi terlebih dahulu</string>
    // Home
    <string name="title_home">Home</string>
    <string name="title_logout">Logout</string>
    <string name="title_profile">Profile</string>
    <string name="title_register">Register</string>
    <string name="title_penilian">Penilaian</string>
    <string name="title_similarity">Similarity</string>
    <string name="title_skripsi">Skripsi</string>
    <string name="title_seminar">Seminar</string>
    <string name="title_update">Update Profile</string>
    <string name="title_update_penilaian">Update Penilaian</string>
    <string name="title_view_penilaian">Tampilan Penilaian</string>
    <string name="title_detail_similarity">Detail Similarity</string>
    <string name="title_detail_jadwal_seminar">Detail Jadwal Seminar</string>
    <string name="profile_name">Nama Profile</string>
    <string name="initial_name">My Name</string>
    <string name="initial_level_dosen">Level Dosen</string>
    <string name="initial_menu">Menu</string>
    <string name="initial_hello">Hallo</string>
    <string name="initial_title_percent">%</string>
    <string name="initial_title_similarty">Judul Skripsi</string>
    <string name="initial_my_student">Bimbingan Saya</string>
    <string name="initial_dosen1">Pembimbing Utama</string>
    <string name="initial_dosen2">Pembimbing Pendamping</string>
    <string name="initial_name_mhs">Nama Mahasiswa</string>
    <string name="initial_regis_seminar">Pendaftar Proposal</string>
    <string name="initial_schedule_seminar">Jadwal Seminar</string>
    <string name="initial_result_seminar">Hasil Seminar</string>
    <string name="initial_status_pendaftaran">Status Pendaftaran</string>
    <string name="initial_status">Status Pendaftaran Skripsi : </string>
    <string name="initial_status_seminar">Status Pendaftaran Seminar : </string>
    <string name="initial_ket">Keterangan : </string>
    <string name="initial_status_result">Hasil</string>
    <string name="initial_status_waiting">Menunggu</string>
    <string name="initial_status_accept">Diterima</string>
    <string name="initial_status_rejected">Ditolak</string>
    <string name="profile_username">Nama Username</string>
    <string name="imageView_banner">banner</string>
    <string name="textview_detail_nim">NIM :</string>
    <string name="textview_detail_ket_nim">Keterangan NIM</string>
    <string name="textview_detail_nama">Nama :</string>
    <string name="textview_detail_ket_nama">Keterangan Nama</string>
    <string name="textview_detail_title">Judul Skripsi :</string>
    <string name="textview_detail_ket_title">Keterangan Judul</string>
    <string name="textview_detail_ketua_penguji">Ketua Penguji :</string>
    <string name="textview_detail_ket_ketua_penguji">Keterangan Ketua Penguji</string>
    <string name="textview_detail_penguji1">Anggota Penguji 1 :</string>
    <string name="textview_detail_ket_penguji1">Keterangan Anggota Penguji 1</string>
    <string name="textview_detail_penguji2">Anggota Penguji 2 :</string>
    <string name="textview_detail_ket_penguji2">Keterangan Anggota Penguji 2</string>
    <string name="textview_detail_dosen1">Pembimbing Utama :</string>
    <string name="textview_detail_ket_dosen1">Keterangan Pembimbing Utama</string>
    <string name="textview_detail_dosen2">Pembimbing Pendamping :</string>
    <string name="textview_detail_ket_dosen2">Keterangan Pembimbing Pendamping</string>
    <string name="textview_role_penguji">Role Penguji</string>
    <string name="textview_nama_penguji">Nama Penguji</string>
    <string name="textview_judul">Judul</string>
    <string name="textview_ket_judul">Ket Judul</string>
    <string name="textview_latar_belakang">Latar Belakang  </string>
    <string name="textview_ket_latar_belakang">Ket Latar Belakang</string>
    <string name="textview_rumusan_masalah">Rumusan Masalah  </string>
    <string name="textview_ket_rumusan_masalah">Ket Rumusan Masalah</string>
    <string name="textview_batasan_masalah">Batasan Masalah  </string>
    <string name="textview_ket_batasan_masalah">Ket Batasan Masalah</string>
    <string name="textview_tujuan">Tujuan</string>
    <string name="textview_ket_tujuan">Ket Tujuan</string>
    <string name="textview_manfaat">Manfaat</string>
    <string name="textview_ket_manfaat">Ket Manfaat</string>
    <string name="textview_tinjauan_pustaka">Tinjauan Pustaka</string>
    <string name="textview_ket_tinjauan_pustaka">Ket Tinjauan Pustaka</string>
    <string name="textview_metodologi">Metodologi</string>
    <string name="textview_ket_metodologi">Ket Metodologi</string>
    <string name="textview_kerangka_pemikiran">Keranganka Pemikirian  </string>
    <string name="textview_ket_kerangka_pemikiran">Ket Keranganka Pemikirian</string>
    <string name="textview_jadwal_kegiatan">Jadwal Kegiatan  </string>
    <string name="textview_ket_jadwal_kegiatan">Ket Jadwal Kegiatan</string>
    <string name="textview_riwayat_penilitian">Riwayat Penilitian  </string>
    <string name="textview_ket_riwayat_penilitian">Ket Riwayat Penilitian</string>
    <string name="textview_daftar_pustaka">Daftar Pustaka  </string>
    <string name="textview_ket_daftar_pustaka">Ket Daftar Pustaka</string>
    <string name="textview_skripsi">Silahkan Upload File Pendaftaran Skripsi</string>
    <string name="textview_seminar">Silahkan Upload File Pendaftaran Seminar</string>
    <string name="textview_penilian">Silahkan Berikan Penilaian Seminar di Bawah Ini</string>
    <string name="textview_similarty">Silahkan Masukan Judul Skripsi Yang Ingin di Cek</string>
    <string name="textview_status">Pilih Revisi Seminar</string>
    <string name="textview_tanggal_bimbingan">1-28 16:43</string>
    <string name="textview_number">1.</string>
    <string name="textview_hasil">Pilih Hasil Seminar</string>
    <string name="inputText_cek_title">Masukan Judul</string>
    <string name="textview_name_krs">Kartu Hasil Studi</string>
    <string name="textview_name_transkripnilai">Transkrip Nilai</string>
    <string name="textview_name_pengesahan">Halaman Pengesahan</string>
    <string name="textview_name_bimbingan">Buku Bimbingan</string>
    <string name="textview_name_kwkomputer">KW Komputer</string>
    <string name="textview_name_kwinggris">KW B.Inggris</string>
    <string name="textview_name_kwkewirausahaan">KW Kewirausahaan</string>
    <string name="textview_name_slippembayaran">Slip Pembayaran</string>
    <string name="top_three_title">Tiga besar judul skripsi yang mirip adalah: %1$s</string>
    <string name="textview_name_plagiasi">Plagiasi</string>
    <string name="textview_name_choice">Silahkan Pilih Pendaftaran</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>