<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_pendaftaran"
        android:icon="@drawable/edit_note"
        android:title="@string/title_register" />

    <item
        android:id="@+id/navigation_penilaian"
        android:icon="@drawable/app_registration"
        android:title="@string/title_penilian" />


    <item
        android:id="@+id/navigation_similarity"
        android:enabled="true"
        android:icon="@drawable/plagiarism"
        android:title="@string/title_similarity" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/person"
        android:title="@string/title_profile"/>
</menu>