<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.setyo.similartytextapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_status_pendaftaran"
            app:destination="@id/navigation_status_pendaftaran" />
        <action
            android:id="@+id/action_homeFragment_to_bimbingan"
            app:destination="@id/navigation_bimbingan" />
        <action
            android:id="@+id/action_homeFragment_to_hasilSeminarMhs"
            app:destination="@id/navigation_hasil_seminar_mhs" />
        <action
            android:id="@+id/action_homeFragment_to_dosbing"
            app:destination="@id/navigation_dosbing" />
        <action
            android:id="@+id/action_homeFragment_to_jadwalSeminar"
            app:destination="@id/navigation_jadwal_seminar" />
        <action
            android:id="@+id/action_homeFragment_to_hasilSeminar"
            app:destination="@id/navigation_hasil_seminar" />
        <action
            android:id="@+id/action_homeFragment_to_daftarSeminar"
            app:destination="@id/navigation_daftar_seminar" />
    </fragment>

    <fragment
        android:id="@+id/navigation_status_pendaftaran"
        android:name="com.setyo.similartytextapp.ui.pendaftaran.StatusPendaftaranFragment"
        android:label="@string/initial_status_pendaftaran"
        tools:layout="@layout/fragment_status_pendaftaran">
    <action
        android:id="@+id/action_statusPendaftaranFragment_to_homeFragment"
        app:destination="@+id/navigation_home"/>
    </fragment>

    <activity
        android:id="@+id/navigation_bimbingan"
        android:name="com.setyo.similartytextapp.ui.home.bimbingan.BimbinganActivity"
        android:label="@string/initial_my_student"
        tools:layout="@layout/activity_bimbingan">
<!--            <action-->
<!--                android:id="@+id/action_bimbingan_dosen1_to_bimbingan"-->
<!--                app:destination="@id/navigation_bimbingan" />-->
    </activity>

    <fragment
        android:id="@+id/navigation_hasil_seminar_mhs"
        android:name="com.setyo.similartytextapp.ui.home.hasilseminarmahasiswa.HasilSeminarMahasiswaFragment"
        android:label="@string/initial_result_seminar"
        tools:layout="@layout/fragment_hasil_seminar_mahasiswa">
            <action
                android:id="@+id/action_hasilSeminarMhs_to_homeFragment"
                app:destination="@id/navigation_home"/>
    </fragment>

    <activity
        android:id="@+id/navigation_bimbingan_dosen1"
        android:name="com.setyo.similartytextapp.ui.home.bimbingan.BimbinganDosen1Activity"
        android:label="activity_bimbingan_dosen1"
        tools:layout="@layout/activity_bimbingan_dosen1">
<!--        <action-->
<!--            android:id="@+id/action_bimbingan_dosen1_to_bimbingan"-->
<!--            app:destination="@id/navigation_bimbingan" />-->
    </activity>

    <activity
        android:id="@+id/navigation_dosbing"
        android:name="com.setyo.similartytextapp.ui.home.dosbing.DosbingActivity"
        android:label="@string/initial_my_student"
        tools:layout="@layout/activity_dosbing">
<!--        <action-->
<!--            android:id="@+id/action_dosbingFragment_to_homeFragment"-->
<!--            app:destination="@id/navigation_home" />-->
    </activity>

    <fragment
        android:id="@+id/navigation_daftar_seminar"
        android:name="com.setyo.similartytextapp.ui.home.daftarseminar.DaftarSeminarFragment"
        android:label="@string/initial_regis_seminar"
        tools:layout="@layout/fragment_daftar_seminar">
        <action
            android:id="@+id/action_daftarFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_jadwal_seminar"
        android:name="com.setyo.similartytextapp.ui.home.jadwalseminar.JadwalSeminarFragment"
        android:label="@string/initial_schedule_seminar"
        tools:layout="@layout/fragment_jadwal_seminar">
        <action
            android:id="@+id/action_jadwalFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_jadwalFragment_to_detailJadwalFragment"
            app:destination="@id/navigation_detail_jadwalseminar" />
    </fragment>

    <fragment
        android:id="@+id/navigation_hasil_seminar"
        android:name="com.setyo.similartytextapp.ui.home.hasilseminar.HasilSeminarFragment"
        android:label="@string/initial_result_seminar"
        tools:layout="@layout/fragment_hasil_seminar">
        <action
            android:id="@+id/action_hasilFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_pendaftaran"
        android:name="com.setyo.similartytextapp.ui.pendaftaran.PendaftaranFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_pendaftaran">
        <action
            android:id="@+id/action_pendaftaranFragment_to_skripsiFragment"
            app:destination="@id/navigation_skripsi" />
        <action
            android:id="@+id/action_pendaftaranFragment_to_seminarFragment"
            app:destination="@id/navigation_seminar" />
    </fragment>

    <fragment
        android:id="@+id/navigation_penilaian"
        android:name="com.setyo.similartytextapp.ui.penilaian.PenilaianFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_penilaian">
        <action
            android:id="@+id/action_penilaianFragment_to_updatePenilaianFragment"
            app:destination="@id/navigation_updatepenilaian" />
        <action
            android:id="@+id/action_penilaianFragment_to_detailPenilaianFragment"
            app:destination="@id/navigation_detailpenilaian" />
    </fragment>

    <fragment
        android:id="@+id/navigation_similarity"
        android:name="com.setyo.similartytextapp.ui.similarity.SimilarityFragment"
        android:label="@string/title_similarity"
        tools:layout="@layout/fragment_similarity">
        <action
            android:id="@+id/action_similarityFragment_to_detailSimilarityFragment"
            app:destination="@id/navigation_detailsimilarity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.setyo.similartytextapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/navigation_skripsi"
        android:name="com.setyo.similartytextapp.ui.skripsi.SkripsiFragment"
        android:label="@string/title_skripsi"
        tools:layout="@layout/fragment_skripsi">
        <action
            android:id="@+id/action_skripsiFragment_to_pendaftaranFragment"
            app:destination="@id/navigation_pendaftaran" />
    </fragment>

    <fragment
        android:id="@+id/navigation_seminar"
        android:name="com.setyo.similartytextapp.ui.seminar.SeminarFragment"
        android:label="@string/title_seminar"
        tools:layout="@layout/fragment_seminar">
        <action
            android:id="@+id/action_seminarFragment_to_pendaftaranFragment"
            app:destination="@id/navigation_pendaftaran" />
    </fragment>

    <fragment
        android:id="@+id/navigation_updatepenilaian"
        android:name="com.setyo.similartytextapp.ui.penilaian.UpdatePenilaianFragment"
        android:label="@string/title_update_penilaian"
        tools:layout="@layout/fragment_update_penilaian">
        <action
            android:id="@+id/action_updatePenilaianFragment_to_penilaianFragment"
            app:destination="@id/navigation_penilaian" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detailpenilaian"
        android:name="com.setyo.similartytextapp.ui.penilaian.DetailPenilaianFragment"
        android:label="@string/title_view_penilaian"
        tools:layout="@layout/fragment_view_penilaian">
        <action
            android:id="@+id/action_updatePenilaianFragment_to_penilaianFragment"
            app:destination="@id/navigation_penilaian" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detailsimilarity"
        android:name="com.setyo.similartytextapp.ui.similarity.DetailSimilarityFragment"
        android:label="@string/title_detail_similarity"
        tools:layout="@layout/fragment_detail_similarity">
        <action
            android:id="@+id/action_detailSimilarityFragment_to_similarityFragment"
            app:destination="@id/navigation_similarity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail_jadwalseminar"
        android:name="com.setyo.similartytextapp.ui.home.jadwalseminar.DetailJadwalSeminarFragment"
        android:label="@string/title_detail_jadwal_seminar"
        tools:layout="@layout/fragment_detail_jadwal_seminar">
        <action
            android:id="@+id/action_detailJadwalSeminarFragment_to_jadwalSeminarFragment"
            app:destination="@id/navigation_jadwal_seminar" />
    </fragment>

</navigation>